# craft

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: 01_simulated_truncation.ipynb  run_bench1.py  run_bench2.py  run_bench3_analysis.py  run_bench3_quant.py  run_bench3_universe.py
benchmarks/cbench/: __init__.py  bench1.py  comparators.py  data.py  figures.py  metrics.py  truncation.py
benchmarks/figures/: bench1_recovery_panel.json  bench2_concordance_panel.json  bench3_enrichment.tsv  bench3_enrichment_panel.json  bench3_quant_summary.tsv
benchmarks/tests/: conftest.py  test_metrics.py  test_truncation.py
docs/: craft_explained.md  features.md  methods.md  methods_paper.md  migration_v2.md  user_guide.md  v2_design.md  whitepaper.md
src/craft/: __init__.py  cli.py  pipeline.py
src/craft/core/: __init__.py  coding_potential.py  completeness.py  evidence.py  intervals.py  nmd.py  pfam.py  polya_atlas.py  recurrence.py  reference.py  utr3.py
src/craft/core/orf/: __init__.py  confidence.py  denovo.py  propagation.py  resolve.py
src/craft/export/: __init__.py  anndata.py  celltype.py
src/craft/io/: __init__.py  bam.py  counts.py  fasta.py  gtf.py  orf_comparison.py
src/craft/report/: __init__.py  html.py  plots.py
test_dataset/input_files/analysis/: build_hybrid_gtf.py  recovery_gencode.py  recurrence_pigeon_min20.py  recurrence_v18.py
tests/: test_celltype.py  test_coding_potential.py  test_completeness.py  test_evidence.py  test_export_anndata.py  test_intervals.py  test_io_bam.py  test_io_counts.py  test_io_fasta.py  test_io_gtf.py  test_nmd.py  test_orf_comparison.py  test_orf_confidence.py  test_orf_denovo.py  test_orf_propagation.py  test_orf_resolve.py  test_pfam.py  test_pipeline.py  test_polya_atlas.py  test_recurrence.py  test_reference.py  test_report.py  test_smoke.py  test_utr3.py
