[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "craft"
description = "Long-read isoform functional-consequence annotator with truncation-aware ORF propagation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Simone Picelli", email = "simone.picelli@iob.ch" },
]
keywords = [
    "long-read RNA-seq",
    "isoform",
    "single-cell",
    "ORF",
    "NMD",
    "functional annotation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pysam>=0.22",
    # PyRanges 0.1.4 converts +/- strands to '.' with pandas 3, which breaks
    # every stranded join.  Keep the tested pair explicit until PyRanges ships
    # a pandas-3-compatible release.
    "pyranges==0.1.4",
    "pandas>=2.0,<3",
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.1",
    "plotly>=5.18",
    "tqdm>=4.65",
    "pyhmmer>=0.10",
    "orfipy>=0.0.4",
    # AnnData 0.13 requires pandas 3 while CRAFT currently requires pandas <3
    # for PyRanges.  zarr<3 is the tested storage stack for AnnData 0.10-0.11.
    "anndata>=0.10,<0.12",
    "zarr>=2.16,<3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
bench = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.0",
]

[project.scripts]
craft = "craft.cli:cli"

[project.urls]
Homepage = "https://github.com/FullLengthFanatic/craft"
Repository = "https://github.com/FullLengthFanatic/craft"
Issues = "https://github.com/FullLengthFanatic/craft/issues"

[tool.hatch.version]
path = "src/craft/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/craft"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
